# scalable-moe-lora

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
configs/: analysis_manifest.example.yaml  granularity_r1_k64.yaml  granularity_r1_k64_cosine.yaml  granularity_r1_k64_early_shared.yaml  granularity_r1_k64_hierarchical.yaml  granularity_r1_k64_linear.yaml  granularity_r1_k64_product_key.yaml  granularity_r2_k32.yaml  granularity_r2_k32_linear.yaml  granularity_r4_k16.yaml  granularity_r4_k16_linear.yaml  granularity_r8_k8.yaml  granularity_r8_k8_linear.yaml  reasoning_baseline.yaml
configs/a_architecture/: moe_lora_coarse.yaml  moe_lora_fine.yaml  standard_lora_r16.yaml  tm_lora_r16.yaml  tm_lora_r16_lr4e4.yaml
configs/c_routers/: cosine.yaml  early_shared.yaml  hierarchical.yaml  linear.yaml  lowrank.yaml  product_key.yaml
configs/extensions/: distill_pk_from_linear.yaml  linear_small_init.yaml  lowrank_kaiming_init.yaml  multihead_pk.yaml  product_key_temp.yaml  two_stage_pk.yaml
docs/: architecture.md  future_work.md  progress_report.tex  reproduce.md  results.md
results/: README.md
results/analysis/: _gate_magnitudes.json  _summary.json  k64_cosine.json  k64_early_shared.json  k64_hierarchical.json  k64_linear.json  k64_lowrank.json  k64_product_key.json  k8_coarse_best.json  k8_coarse_final.json
results/eval/: llama1b_baseline_r16_seed42_eval.json  llama1b_baseline_r16_seed42_ood_OOD.json  llama1b_tm_lora_v2_seed42_eval.json  (+29 more)
scripts/: migrate_multihead_checkpoint.py  run_distill.sh  run_eval.sh  run_train.sh  sbatch_eval.sh  sbatch_stress.sh  sbatch_train.sh  stress_test.py
src/: data.py  data_reasoning.py  evaluate.py  evaluate_reasoning.py  lora_layers.py  model.py  train.py  train_reasoning.py  utils.py
tests/: test_routers.py
(+75 files in other folders)
